feat: update customer filter
