# docs/swagger.json
@@ -937,13 +937,21 @@
                     {
                         "type": "string",
                         "description": " ",
-                        "name": "phone",
+                        "name": "id_no",
                         "in": "query"
                     },
                     {
                         "type": "string",
+                        "example": "2022-05-14T00:00:00.000Z#2022-07-14T00:00:00.000Z",
                         "description": " ",
-                        "name": "id_no",
+                        "name": "court_order_date",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "example": "2022-05-14T00:00:00.000Z#2022-07-14T00:00:00.000Z",
+                        "description": " ",
+                        "name": "court_release_date",
                         "in": "query"
                     }
                 ],
@@ -1476,31 +1484,19 @@
         "entities.Customer": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "string"
-                },
                 "age": {
                     "type": "integer"
-                },
-                "avg_month_income": {
-                    "type": "string"
-                },
-                "bank_ac_name": {
-                    "type": "string"
-                },
-                "bank_ac_number": {
-                    "type": "string"
                 },
                 "birth": {
                     "type": "string"
                 },
-                "code": {
+                "court_filing_date": {
                     "type": "string"
                 },
-                "collateral": {
+                "court_order_date": {
                     "type": "string"
                 },
-                "collateral_value": {
+                "court_release_date": {
                     "type": "string"
                 },
                 "created_at": {
@@ -1509,55 +1505,13 @@
                 "created_by": {
                     "type": "string"
                 },
-                "debt_instalment_amount": {
-                    "type": "string"
-                },
-                "debt_outstanding": {
-                    "type": "string"
-                },
-                "debt_status": {
-                    "type": "string"
-                },
-                "debt_type": {
-                    "type": "string"
-                },
-                "dti": {
-                    "type": "string"
-                },
-                "fb_name": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 },
                 "id_no": {
                     "type": "string"
                 },
-                "ig_name": {
-                    "type": "string"
-                },
-                "last_name": {
-                    "type": "string"
-                },
                 "levels": {
-                    "type": "string"
-                },
-                "linkedin_name": {
-                    "type": "string"
-                },
-                "loan_amount": {
-                    "type": "string"
-                },
-                "loan_date": {
-                    "type": "string"
-                },
-                "loan_instalment_amount": {
-                    "type": "string"
-                },
-                "loan_tenor": {
                     "type": "string"
                 },
                 "meta": {
@@ -1566,37 +1520,7 @@
                         "$ref": "#/definitions/entities.Meta"
                     }
                 },
-                "office_address": {
-                    "type": "string"
-                },
-                "order_date": {
-                    "type": "string"
-                },
-                "other_name": {
-                    "type": "string"
-                },
-                "phone1": {
-                    "type": "string"
-                },
-                "phone2": {
-                    "type": "string"
-                },
-                "phone3": {
-                    "type": "string"
-                },
-                "remarks": {
-                    "type": "string"
-                },
-                "residential_address_1": {
-                    "type": "string"
-                },
-                "residential_address_2": {
-                    "type": "string"
-                },
-                "residential_address_3": {
-                    "type": "string"
-                },
-                "score": {
+                "name": {
                     "type": "string"
                 },
                 "status": {
@@ -1607,22 +1531,10 @@
                         "Disable"
                     ]
                 },
-                "status_date": {
-                    "type": "string"
-                },
-                "tax_id_number": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
                 "updated_at": {
                     "type": "string"
                 },
                 "updated_by": {
-                    "type": "string"
-                },
-                "weibo_name": {
                     "type": "string"
                 }
             }
@@ -1827,78 +1739,24 @@
         "managers.CustomerCreateParam": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "avg_month_income": {
-                    "type": "string"
-                },
-                "bank_ac_name": {
-                    "type": "string"
-                },
-                "bank_ac_number": {
-                    "type": "string"
-                },
                 "birth": {
                     "type": "string"
                 },
-                "code": {
+                "court_filing_date": {
                     "type": "string"
                 },
-                "collateral": {
+                "court_order_date": {
                     "type": "string"
                 },
-                "collateral_value": {
-                    "type": "string"
-                },
-                "debt_instalment_amount": {
-                    "type": "string"
-                },
-                "debt_outstanding": {
-                    "type": "string"
-                },
-                "debt_status": {
-                    "type": "string"
-                },
-                "debt_type": {
-                    "type": "string"
-                },
-                "dti": {
-                    "type": "string"
-                },
-                "fb_name": {
-                    "type": "string"
-                },
-                "first_name": {
+                "court_release_date": {
                     "type": "string"
                 },
                 "id_no": {
                     "type": "string"
                 },
-                "ig_name": {
-                    "type": "string"
-                },
-                "last_name": {
-                    "type": "string"
-                },
                 "levels": {
                     "type": "string",
                     "example": "|1|2|"
-                },
-                "linkedin_name": {
-                    "type": "string"
-                },
-                "loan_amount": {
-                    "type": "string"
-                },
-                "loan_date": {
-                    "type": "string"
-                },
-                "loan_instalment_amount": {
-                    "type": "string"
-                },
-                "loan_tenor": {
-                    "type": "string"
                 },
                 "meta": {
                     "type": "object",
@@ -1906,49 +1764,7 @@
                         "type": "string"
                     }
                 },
-                "office_address": {
-                    "type": "string"
-                },
-                "order_date": {
-                    "type": "string"
-                },
-                "other_name": {
-                    "type": "string"
-                },
-                "phone1": {
-                    "type": "string"
-                },
-                "phone2": {
-                    "type": "string"
-                },
-                "phone3": {
-                    "type": "string"
-                },
-                "remarks": {
-                    "type": "string"
-                },
-                "residential_address_1": {
-                    "type": "string"
-                },
-                "residential_address_2": {
-                    "type": "string"
-                },
-                "residential_address_3": {
-                    "type": "string"
-                },
-                "score": {
-                    "type": "string"
-                },
-                "status_date": {
-                    "type": "string"
-                },
-                "tax_id_number": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "weibo_name": {
+                "name": {
                     "type": "string"
                 }
             }
@@ -1956,78 +1772,24 @@
         "managers.CustomerUpdateParam": {
             "type": "object",
             "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "avg_month_income": {
-                    "type": "string"
-                },
-                "bank_ac_name": {
-                    "type": "string"
-                },
-                "bank_ac_number": {
-                    "type": "string"
-                },
                 "birth": {
                     "type": "string"
                 },
-                "code": {
+                "court_filing_date": {
                     "type": "string"
                 },
-                "collateral": {
+                "court_order_date": {
                     "type": "string"
                 },
-                "collateral_value": {
-                    "type": "string"
-                },
-                "debt_instalment_amount": {
-                    "type": "string"
-                },
-                "debt_outstanding": {
-                    "type": "string"
-                },
-                "debt_status": {
-                    "type": "string"
-                },
-                "debt_type": {
-                    "type": "string"
-                },
-                "dti": {
-                    "type": "string"
-                },
-                "fb_name": {
-                    "type": "string"
-                },
-                "first_name": {
+                "court_release_date": {
                     "type": "string"
                 },
                 "id_no": {
                     "type": "string"
                 },
-                "ig_name": {
-                    "type": "string"
-                },
-                "last_name": {
-                    "type": "string"
-                },
                 "levels": {
                     "type": "string",
                     "example": "|1|2|"
-                },
-                "linkedin_name": {
-                    "type": "string"
-                },
-                "loan_amount": {
-                    "type": "string"
-                },
-                "loan_date": {
-                    "type": "string"
-                },
-                "loan_instalment_amount": {
-                    "type": "string"
-                },
-                "loan_tenor": {
-                    "type": "string"
                 },
                 "meta": {
                     "type": "object",
@@ -2035,52 +1797,10 @@
                         "type": "string"
                     }
                 },
-                "office_address": {
-                    "type": "string"
-                },
-                "order_date": {
-                    "type": "string"
-                },
-                "other_name": {
-                    "type": "string"
-                },
-                "phone1": {
-                    "type": "string"
-                },
-                "phone2": {
-                    "type": "string"
-                },
-                "phone3": {
-                    "type": "string"
-                },
-                "remarks": {
-                    "type": "string"
-                },
-                "residential_address_1": {
-                    "type": "string"
-                },
-                "residential_address_2": {
-                    "type": "string"
-                },
-                "residential_address_3": {
-                    "type": "string"
-                },
-                "score": {
+                "name": {
                     "type": "string"
                 },
                 "status": {
-                    "type": "string"
-                },
-                "status_date": {
-                    "type": "string"
-                },
-                "tax_id_number": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "weibo_name": {
                     "type": "string"
                 }
             }
